@@ -135,6 +135,7 @@ o added timestamp in installation logs
     set
 75. smtpd.c: Use last line to set error message from error strings returned by
     qmail_close()
+76. surblfilter.c: display the SURBL blocked uri in message
 
 * Sun Apr 23 2023 17:51:54 +0000 Manvendra Bhangui <indimail-mta@indimail.org> 3.0.3-1.1%{?dist}
 Release 3.0.3-1.1 Start 01/02/2023 End 23/04/2023
